--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
     "editor.formatOnSave": false,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
-      "source.formatDocument": true,
-      "source.fixAll.eslint": true,
-      "source.sortMembers": true
+      "source.formatDocument": "explicit",
+      "source.fixAll.eslint": "explicit",
+      "source.sortMembers": "explicit"
     },
     "[dockerfile]": {
       "editor.defaultFormatter": "ms-azuretools.vscode-docker"
