--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "eslint": "^8.55.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
