--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-    "singleQuote": true,
-    "trailingComma": "none",
-    "tabWidth": 2
-  }
-  
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all"
+}
