--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.2",
     "prettier": "3.1.1",
     "typescript": "^5.3.3"
