--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: yarn dev
+    command: npm run dev
     env_file:
       - .env
     ports:
