--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "build": "rimraf ./dist && tsc",
-    "start": "node ./dist/app.js",
-    "dev": "nodemon --watch src --exec ts-node src/app.ts"
+    "start": "ts-node ./src/app.ts",
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
+    "seed": "ts-node ./src/seeds/seeder.ts",
+    "migrate": "prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.8.0",
     "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
+    "prisma": "^5.8.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.7",
