--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "rimraf ./dist && tsc",
     "start": "ts-node ./src/app.ts",
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
-    "seed": "ts-node ./src/seeds/seeder.ts",
-    "migrate": "prisma migrate dev"
+    "seed": "npx dotenv -e ./.envs/.postgres_local.env -- ts-node ./src/seeds/seeder.ts",
+    "migrate": "npx dotenv -e ./.envs/.postgres_local.env -- prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
