--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@tsconfig/recommended": "^1.0.8",
+    "@types/axios": "^0.9.36",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -22,10 +23,13 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/ws": "^8.18.1",
+    "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.1"
   }
 }
