too many things in one commit

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-TOKEN_SECRET_KEY = "my-secret-key"
-TOKEN_EXPIRATION_TIME = '1m'
-REFRESH_TOKEN_SECRET_KEY = "my-refresh-secret-key"
-REFRESH_TOKEN_EXPIRATION_TIME = '1d'
+DATABASE_URL="postgresql://user:password@localhost:5432/alarm"
