--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "seed": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/ws": "^8.18.1",
     "axios": "^1.8.4",
@@ -30,6 +32,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.6.0",
     "ws": "^8.18.1"
   }
 }
