--- a/.envs/.server.env
+++ b/.envs/.server.env
@@ -4,3 +4,6 @@ REFRESH_TOKEN_SECRET_KEY = "my-refresh-secret-key"
 REFRESH_TOKEN_EXPIRATION_TIME = '1d'
 
 DATABASE_URL = "postgresql://user:password@alarm-postgres:5432/alarm"
+
+INFLUX_HOST = "http://alarm-influxdb:8181"
+INFLUX_SCALE_TABLE = "scale"
