--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "@influxdata/influxdb3-client": "^1.1.0",
     "@prisma/client": "^6.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/ws": "^8.18.1",
