--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.6.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "zod": "^3.24.3"
   }
 }
