complete login with tokens and refresh tokens

--- a/.envs/.server.env
+++ b/.envs/.server.env
@@ -1,7 +1,7 @@
 TOKEN_SECRET_KEY = "my-secret-key"
-TOKEN_EXPIRATION_TIME = '1m'
+TOKEN_EXPIRATION_TIME = '1s'
 REFRESH_TOKEN_SECRET_KEY = "my-refresh-secret-key"
-REFRESH_TOKEN_EXPIRATION_TIME = '1d'
+REFRESH_TOKEN_EXPIRATION_TIME = '1m'
 
 DATABASE_URL = "postgresql://user:password@alarm-postgres:5432/alarm"
 
